--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,8 @@ jobs:
      
 
       # Runs a set of commands using the runners shell
-      - name: ExtraPackages-Installation
-      - run: choco install qbittorrent 64gram
+      - name: tt1
+        run: choco install qbittorrent 64gram
       - name: Run a multi-line script
         run: |
          ls
